--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "precommit": "lint-staged",
-    "prettier": "prettier --single-quote --write \"./**/*.{js,jsx,json,css,md}\"",
+    "prettier": "prettier --write \"./**/*.{js,jsx,json,css,md}\"",
     "xo": "xo --fix *.js {src,test,scripts}/**/*.js !src/vendor/prism.js",
     "lint": "npm run prettier && npm run xo",
     "ava": "cross-env BABEL_ENV=testing ava",
@@ -23,7 +23,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,md}": [
-      "prettier --single-quote --write",
+      "prettier --write",
       "git add"
     ]
   },
@@ -72,7 +72,7 @@
     "mutationobserver-shim": "^0.3.2",
     "npm-run-all": "^4.1.2",
     "path": "^0.12.7",
-    "prettier": "^1.10.2",
+    "prettier": "^1.11.1",
     "request": "^2.83.0",
     "require-hacker": "^3.0.1",
     "semver": "^5.4.1",
